--- a/en/meta.yml
+++ b/en/meta.yml
@@ -1,19 +1,27 @@
-title: default-project-template
+title: Space talk
 hero_image: images/banner.png
-description: default-project-template description
+description:
+  Use Scratch to give sprites an 'emote' so that they communicate when
+  clicked
+meta_title: Scratch coding projects for kids and teens | Intro to Scratch
+meta_description: Learn to code in Scratch with the Raspberry Pi Foundation's coding projects for kids and teens. Make Scratch animations, games, apps, and more.
+pdf: resources/space-talk.pdf
 version: 1
 listed: false
 copyedit: false
 last_tested: "2025-01-01"
 steps:
   - title: What you will make
-  - title: Step title
+  - title: Create your scene
+  - title: Pico says hello
     completion:
-      - engaged      
-  - title: Next step title
+      - engaged
+  - title: Pico plays a sound
+  - title: Nano switches costumes
+  - title: Nano signs "Thanks!"
+  - title: Giga changes colour
     completion:
       - internal
-  - title: Challenge
-    challenge: true
+  - title: Upgrade your project
     completion:
       - external
