--- a/en/meta.yml
+++ b/en/meta.yml
@@ -5,7 +5,7 @@ description:
   clicked
 meta_title: Scratch coding projects for kids and teens | Intro to Scratch
 meta_description: Learn to code in Scratch with the Raspberry Pi Foundation's coding projects for kids and teens. Make Scratch animations, games, apps, and more.
-pdf: resources/space-talk.pdf
+pdf: resources/space-talk-visual.pdf
 version: 1
 listed: false
 copyedit: false
